--- a/src/Components/home/Partners.css
+++ b/src/Components/home/Partners.css
@@ -1,12 +1,13 @@
-*{
-margin: 0vh;
-padding: 0vh;
-}
-*{
-text-decoration: none;
+.fpartners{
+    position: fixed;
+    z-index: 0;
+    border-radius: 0;
+    margin: 0vh;
+    padding: 0vh;
 }
 .wrapper-P{
-background-image: url('./images/partners.png');
+    position: relative;
+    z-index: 1;
 }
 .menu-P{
 background-color: transparent;
@@ -34,14 +35,15 @@ background-color: rgba(255, 255, 255, 0.473);
 border-color: transparent;
 color: white;
 }
-.btn-XP{
-width: 70vh;
-height: 20vh;
-background-color: transparent;
-border-color: transparent;
-color: rgb(255, 255, 255);
-font-size: 50pt;
-font-family: Perpetua Titling MT;
+.titlePartners{
+    width: 30vw;
+    height: 10vh;
+    color: rgb(255, 255, 255);
+    font-size: 40pt;
+    font-family: Perpetua Titling MT;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content-P{
 background-color:  transparent;
@@ -52,7 +54,7 @@ justify-content: space-evenly;
 align-items: center;
 }
 .cardP{
-transition: all 2s;
+transition: all 1s;
 width: 20vh;
 height: 20vh;
 background-color: transparent;
@@ -66,21 +68,15 @@ justify-content: space-evenly;
 padding: 2vh;
 box-shadow: 1px 1px 10px black;
 text-align: center;
+text-decoration: none;
 }
 .cardP:hover{
-transition: all 2s;
 width: 60vh;
 height: 60vh;
-background-color: transparent;
-font-family: PMingLiU-ExtB;
 font-size: 8pt;
-color: black;
-text-align: center;
 display: flex;
 flex-direction: column;
 justify-content: space-evenly;
-padding: 2vh;
-box-shadow: 1px 1px 10px black;
 }
 .titleP{
 background-color: rgba(255, 255, 255, 0.486);
