--- a/src/Components/home/About.css
+++ b/src/Components/home/About.css
@@ -2,7 +2,7 @@
 margin: 0;
 padding: 0;
 }
-.fabout{
+.fundoAbout{
     margin: 0;
     padding: 0;
     border-radius: 0;
@@ -11,21 +11,17 @@ padding: 0;
     width: 100vw;
     height: 100vh;
 }
-.wrapper-A{
+.wrapperAbout{
 position: relative;
 z-index: 1;
 }
-.menu-A{
-background-color: transparent;
+.menuAbout{
 height: 20vh;
 display: flex;
 justify-content: space-evenly;
 align-items: center;
-font-size: 70pt;
-font-family: Perpetua Titling MT;
-color: white;
 }
-.btn-A{
+.btnAbout{
 width: 30vh;
 height: 10vh;
 border: solid;
@@ -36,39 +32,32 @@ color: white;
 font-size: 15pt;
 font-family: Perpetua Titling MT;
 }
-.btn-A:hover{
-width: 30vh;
-height: 10vh;
-border: solid;
-border-width: 0.3vh;
-border-color: transparent;
+.btnAbout:hover{
 background-color:rgba(255, 255, 255, 0.39);
-color: white;
-font-size: 15pt;
-font-family: Perpetua Titling MT;
-}
-.btn-XA{
-width: 70vh;
-height: 20vh;
-background-color: transparent;
 border-color: transparent;
+    }
+.titleAbout{
+width: 30vw;
+height: 20vh;
 color: rgb(255, 255, 255);
-font-size: 50pt;
+font-size: 40pt;
 font-family: Perpetua Titling MT;
+display: flex;
+justify-content: center;
+align-items: center;
 }
-.content-A{
+.contentAbout{
 height: 75vh;
 display: flex;
 justify-content: flex-start;
 align-items: flex-start;
 }
-.card-A{
-transition: all 1s;
-background-color: rgb(0, 0, 0);
+.cardAbout{
+background-color: black;
 color: white;
 height: 65vh;
 width: 60vh;
-margin-left: 6.5vh;
+margin-left: 12vw;
 padding: 5vh;
 font-family: Agency FB;
 font-size: 10pt;
@@ -76,11 +65,11 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-box-shadow: 1px 1px 10px black;
 text-align: justify;
 border-radius: 5px;
+box-shadow: 0px 0px 10px 01px #000000;
 }
-.footer-A{
+.footerAbout{
 background-color:transparent;
 height: 5vh;
 font-size: 20pt;
