--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -1,22 +1,22 @@
-*{
-margin: 0vh;
-padding: 0vh;
+.fundoHome{
+    position: fixed;
+    z-index: 0;
+    margin: 0;
+    padding: 0;
+    border-radius: 0px;
 }
-.wrapper-H{
-background-image: url('./images/edu.png');
+.wrapperHome{
+    position: relative;
+    z-index: 1;
 }
-.menu-H{
-background-color: transparent;
+.menuHome{
 height: 20vh;
 display: flex;
 justify-content: space-evenly;
 align-items: center;
-font-size: 70pt;
-font-family: Perpetua Titling MT;
-color: white;
 }
-.btn-H{
-width: 30vh;
+.btnHome{
+    width: 30vh;
 height: 10vh;
 border: solid;
 border-width: 0.3vh;
@@ -26,22 +26,24 @@ color: white;
 font-size: 15pt;
 font-family: Perpetua Titling MT;
 }
-.btn-H:hover{
-background-color: rgba(255, 255, 255, 0.473);
+.btnHome:hover{
+background-color: rgba(255, 255, 255, 0.322);
 border-color: transparent;
-color: white;
+
+
 }
-.btn-XH{
-width: 70vh;
-height: 20vh;
-background-color: transparent;
-border-color: transparent;
+.titleHome{
+width: 30vw;
+height: 10vh;
 color: rgb(255, 255, 255);
-font-size: 50pt;
+font-size: 40pt;
 font-family: Perpetua Titling MT;
+display: flex;
+justify-content: center;
+align-items: center;
+
 }
-.content-H{
-background-color:  transparent;
+.contentHome{
 height: 75vh;
 font-size: 90pt;
 font-family: Perpetua Titling MT;
@@ -50,7 +52,7 @@ display: flex;
 justify-content: center;
 align-items:center;
 }
-.footer-H{
+.footerHome{
 background-color:transparent;
 height: 5vh;
 font-size: 20pt;
