--- a/src/Components/home/Skills.css
+++ b/src/Components/home/Skills.css
@@ -1,4 +1,4 @@
-.fskills{
+.fundoSkills{
 position: fixed;
 z-index: 0;
 width: 100vw;
@@ -7,11 +7,11 @@ margin: 0;
 padding: 0;
 border-radius: 0;
 }
-.wrapper-S{
+.wrapperSkills{
 position: relative;
 z-index: 1;
 }
-.menu-S{
+.menuSkills{
 background-color: transparent;
 height: 20vh;
 display: flex;
@@ -21,66 +21,62 @@ font-size: 70pt;
 font-family: Perpetua Titling MT;
 color: white;
 }
-.btn-S{
-width: 30vh;
+.titleSkills{
+    width: 30vw;
 height: 10vh;
-border: solid;
-border-width: 0.3vh;
-border-color: white;
-background-color:transparent;
-color: white;
-font-size: 15pt;
+color: rgb(255, 255, 255);
+font-size: 40pt;
 font-family: Perpetua Titling MT;
-}
-.btn-S:hover{
-background-color: rgba(255, 255, 255, 0.459);
-border-color: transparent;
-color: white;
-}
-.btn-XS{
-width: 70vh;
-height: 20vh;
-background-color: transparent;
-border-color: transparent;
-color: white;
-font-size: 45pt;
-font-family: Perpetua Titling MT;
-}
-.content-S{
-background-color:  transparent;
-height: 75vh;
-font-size: 10pt;
-color:BLACK;
 display: flex;
-justify-content: space-evenly;
-align-items: center;
-}
-.card1-S{
-transition: all 1s;
-background-color: WHITE;
-width: 25vh;
-height: 35vh;
-font-family: Agency FB;
-font-size: 3pt;
-display: flex;
-flex-direction: column;
 justify-content: center;
 align-items: center;
-padding: 2vh;
-text-align: justify;
-margin: 2vh;
-border-radius: 5px;
-box-shadow: 1px 1px 10px black;
 }
-.card1-S:hover{
+.btnSkills{
+    width: 30vh;
+    height: 10vh;
+    border: solid;
+    border-width: 0.3vh;
+    border-color: white;
+    background-color:transparent;
+    color: white;
+    font-size: 15pt;
+    font-family: Perpetua Titling MT;
+    }
+    .btnSkills:hover{
+        background-color: rgba(255, 255, 255, 0.459);
+        border-color: transparent;
+        color: white;
+        }
+.contentSkills{
+    height: 75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+.cardSkills{
 transition: all 1s;
-width: 45vh;
-height: 60vh;
+background-color: WHITE;
+width: 10vw;
+height: 30vh;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+text-align: justify;
+font-size: 3pt;
+margin: 1vw;
+padding: 3vh;
+box-shadow: 0px 0px 10px 1px #000000;
+}
+.cardSkills:hover{
+transition: all 1s;
+width: 20vw;
+height: 40vh ;
 font-family: Agency FB;
-font-size: 6pt;
+font-size: 5pt;
 box-shadow: 1px 1px 10px black;
 }
-.footer-S{
+.footerSkills{
 background-color:transparent;
 height: 5vh;
 font-size: 20pt;
