--- a/src/Components/home/Partners.css
+++ b/src/Components/home/Partners.css
@@ -1,13 +1,15 @@
-.fpartners{
+.fundoPartners{
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
     position: fixed;
     z-index: 0;
-    border-radius: 0;
-    margin: 0vh;
-    padding: 0vh;
+    width: 100vw;
+    height: 100vh;
 }
-.wrapper-P{
-    position: relative;
-    z-index: 1;
+.wrapperPartners{
+position: relative;
+z-index: 1;
 }
 .menu-P{
 background-color: transparent;
