--- a/src/Components/home/Contact.css
+++ b/src/Components/home/Contact.css
@@ -1,14 +1,16 @@
-    .fundoContact{
-        position: fixed;
-        z-index: 0;
-        border-radius: 0;
-        margin: 0vh;
-        padding: 0vh;
-    }
-    .wrapper-C{
-        position: relative;
-        z-index: 1;
-    }
+.fundoContact{
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    position: fixed;
+    z-index: 0;
+    width: 100vw;
+    height: 100vh;
+}
+.wrapperContact{
+position: relative;
+z-index: 1;
+}
     .menu-C{
     background-color: transparent;
     height: 20vh;
