--- a/src/Components/home/About.css
+++ b/src/Components/home/About.css
@@ -51,8 +51,8 @@ align-items: flex-start;
 .cardAbout{
 background-color: black;
 color: white;
-height: 65vh;
-width: 60vh;
+height: 66vh;
+width: 30vw;
 margin-left: 12vw;
 padding: 5vh;
 font-family: Agency FB;
