--- a/src/Components/home/Contact.css
+++ b/src/Components/home/Contact.css
@@ -64,19 +64,18 @@ z-index: 1;
     color: white;
     }
     .content-C{
-    height: 65vh;
+    height: 50vh;
     width: 100%;
     font-size: 10pt;
     color:BLACK;
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
-    align-items:flex-start;
+    align-items: flex-start;
     
     }
     .form{
-    height: 60vh;
-    width: 50vh;
+    height: 48vh;
+    width: 17vw;
     font-size: 15pt;
     font-family: Perpetua Titling MT;
     color:white;
@@ -86,13 +85,13 @@ z-index: 1;
     align-items:center;
     background: transparent;
     text-align: center;
-    margin-left: 11.5Vh;
-    box-shadow: 0px 0px 5px 0px BLACK;
+    margin-left: 8vw;
     }
+ 
     .name{
-    background-color:  rgba(255, 255, 255, 0.315);
+    background-color: rgba(255, 255, 255, 0.336);
     height: 3vh;
-    width: 35vh;
+    width: 20vw;
     color: rgba(0, 0, 0, 0.808);
     margin: 1VH;
     font-family: Agency FB;
@@ -103,9 +102,9 @@ z-index: 1;
     border-width: 0.1vh;
     }
     .email{
-    background-color:  rgba(255, 255, 255, 0.315);
+    background-color:  rgba(255, 255, 255, 0.336);
     height: 3vh;
-    width: 35vh;
+    width: 20vw;
     color: rgba(0, 0, 0, 0.808);
     margin: 1VH;
     font-family: Agency FB;
@@ -116,9 +115,9 @@ z-index: 1;
     border-width: 0.1vh;
     }
     .text{
-    background-color:  rgba(255, 255, 255, 0.315);
+    background-color:  rgba(255, 255, 255, 0.336);
     height: 10vh;
-    width: 35vh;
+    width: 19.2vw;
     color: rgba(0, 0, 0, 0.808);
     margin: 1VH;
     font-family: Agency FB;
@@ -132,46 +131,54 @@ z-index: 1;
     .btnSubmit{
     background-color: transparent;
     height: 8vh;
-    width: 25vh;
+    width: 20.3vw;
+    border: solid;
+    border-width: 0.3vh;
+    border-color: white;
     color: white;
     margin: 1VH;
     font-family:Perpetua Titling MT;
     font-size: 12pt;
     text-align: center;
-    outline: none;
-    border-color: white;
-    border-width: 0.3vh;
-    box-shadow: 1px 1px 10px black;
     }
     .btnSubmit:hover{
-    background-color: rgba(255, 255, 255, 0.342);
+    background-color: rgba(255, 255, 255, 0.295);
     border-color: transparent;
     }
-     img{
-    padding: 1vh;
+    .subContent-C{
+        background-color:transparent;
+        height: 25vh;
+        font-size: 20pt;
+        font-family: Mistral;
+        color:rgb(255, 255, 255);
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-right: 2vh;
+        }
+    img{
+        border-radius: 5px;
     }
+ 
     .icones{
-    background-color: rgba(255, 255, 255, 0.267);
-    width: 30vh;
+    width: 12vw;
+    height: 20vh;
+    background-color: transparent;
+    box-shadow: 0px 0px 10px 1px black;
+    color: white;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 10pt;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px black;
+    font-size: 12pt;
+    font-family: Agency FB;
+    padding-top: 5px;
     }
-    .footer1-C{
-    background-color:transparent;
-    height: 10vh;
-    font-size: 20pt;
-    font-family: Garamond;
-    color:rgb(255, 255, 255);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 2vh;
+    .icones:hover{
+    background-color: rgba(255, 255, 255, 0.295);
     }
-    .footer2-C{
+
+    .footer-C{
         background-color:transparent;
         height: 5vh;
         font-size: 20pt;
