--- a/src/Components/home/About.css
+++ b/src/Components/home/About.css
@@ -46,17 +46,36 @@ align-items: center;
 height: 75vh;
 display: flex;
 justify-content: flex-start;
-align-items: flex-start;
+align-items: center;
 }
-.cardAbout{
-background-color: black;
-color: white;
-height: 66vh;
-width: 30vw;
-margin-left: 12vw;
+.cardAboutBook{
+    background-color:  rgb(0, 0, 0);
+    color: white;
+    height: 40vh;
+    width: 20vw;
+    margin-left: 3vw;
+    padding: 5vh;
+    font-family: Agency FB;
+    font-size: 10pt;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 01px #000000;
+
+
+
+}
+.cardAboutText{
+background-color: rgba(255, 255, 255, 0.699);
+color: black;
+height: 40vh;
+width: 20vw;
 padding: 5vh;
 font-family: Agency FB;
-font-size: 10pt;
+font-size: 8pt;
 display: flex;
 flex-direction: column;
 justify-content: center;
@@ -64,6 +83,8 @@ align-items: center;
 text-align: justify;
 border-radius: 5px;
 box-shadow: 0px 0px 10px 01px #000000;
+
+
 }
 .footerAbout{
 background-color:transparent;
