--- a/src/Components/footer/styles.css
+++ b/src/Components/footer/styles.css
@@ -1,6 +1,6 @@
 .footerHome{
-    position: relative;
-    z-index: 1;
+    position: fixed;
+    z-index: 0;
     width: 100vw;
     height: 5vh;
     background-color:transparent;
@@ -8,7 +8,6 @@
     font-family: Mistral;
     color:rgb(255, 255, 255);
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: 2vh;
+    justify-content: center;
+    align-items: flex-end;
     }
