--- a/src/Components/menu/styles.css
+++ b/src/Components/menu/styles.css
@@ -2,30 +2,30 @@
 position: relative;
 z-index: 1;
 width: 100vw;
-height: 20vh;
+height: 12vh;
 display: flex;
 justify-content: space-evenly;
-align-items: center;
+align-items: flex-end;
 }
 .btnHome{
-width: 30vh;
 height: 10vh;
+width: 15vw;
+background-color: transparent;
 border: solid;
-border-width: 0.3vh;
 border-color: white;
-background-color:transparent;
 color: white;
 font-size: 15pt;
 font-family: Perpetua Titling MT;
 }
 .btnHome:hover{
-background-color: rgba(255, 255, 255, 0.322);
-border-color: transparent;
+background-color: rgba(255, 255, 255, 0.288);
 }
 .titleHome{
-width: 30vw;
+position: relative;
+z-index: 1;
+width: 100vw;
 color: rgb(255, 255, 255);
-font-size: 40pt;
+font-size: 50pt;
 font-family: Perpetua Titling MT;
 display: flex;
 justify-content: center;
