--- a/src/Components/menu/styles.css
+++ b/src/Components/menu/styles.css
@@ -1,33 +1,134 @@
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 .menuHome{
-position: relative;
-z-index: 1;
-width: 100vw;
-height: 12vh;
-display: flex;
-justify-content: space-evenly;
-align-items: flex-end;
+    position: relative;
+    z-index: 1;
+    width: 100vw;
+    height: 12vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
 }
 .btnHome{
-height: 10vh;
-width: 15vw;
-background-color: transparent;
-border: solid;
-border-color: white;
-color: white;
-font-size: 15pt;
-font-family: Perpetua Titling MT;
+    height: 10vh;
+    width: 15vw;
+    background-color: transparent;
+    border: solid;
+    border-color: white;
+    color: white;
+    font-size: 15px;
+    font-family: Perpetua Titling MT;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    text-decoration: none;
+}
+.hamburger{
+    width:40px;
+    height:40px;
+    position: relative;
+    align-self: center;
+    cursor: pointer;
+    display: none;
+    margin-right:40px;
 }
 .btnHome:hover{
-background-color: rgba(255, 255, 255, 0.288);
+    background-color: rgba(255, 255, 255, 0.288);
 }
 .titleHome{
-position: relative;
-z-index: 1;
-width: 100vw;
-color: rgb(255, 255, 255);
-font-size: 50pt;
-font-family: Perpetua Titling MT;
-display: flex;
-justify-content: center;
-align-items: center;
+    position: relative;
+    z-index: 1;
+    width: 100vw;
+    color: rgb(255, 255, 255);
+    font-size: 50pt;
+    font-family: Perpetua Titling MT;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+.cardMenu{
+    position: absolute;
+    z-index: 2;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #FFF;
+    border-radius: 8px;
+    background-color: rgba(137, 138, 137, 0.3);
+    top: -620px;
+}
+.cardMenu-active{
+    position: absolute;
+    z-index: 2;
+    width: 300px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #FFF;
+    border-radius: 8px;
+    background-color: rgba(137, 138, 137, 0.3);
+    
+    animation: cardDrop 1s forwards;
+    
+}
+@keyframes cardDrop {
+    from{
+        top: -620px;
+    }
+    to{
+        top: 80px;
+    }
+}
+.btnCard{
+    height: 45px;
+    width: 110px;
+    background-color: transparent;
+    border: solid;
+    border-color: white;
+    color: white;
+    font-size: 12px;
+    font-family: Perpetua Titling MT;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    text-decoration: none;
+    margin: 5px;
+}
+.closeMenu{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width:1100px) {
+    .btnHome{
+        height: 7vh;
+        width: 12vw;
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width:800px) {
+    .btnHome{
+        display:none
+    }
+    .hamburger{
+        display: block;
+    }
+    .menuHome{
+        justify-content: flex-end;
+    }
+}
+
